# machine

./: .gitignore
exp/: machine.py
exp/results/cache/auctionmark/2/2/dram-disk/: cache.csv
exp/results/cache/auctionmark/2/2/dram-nvm-disk/: cache.csv
exp/results/cache/auctionmark/2/2/nvm/: cache.csv
exp/results/cache/auctionmark/2/2/nvm-disk/: cache.csv
exp/results/cache/auctionmark/2/2/nvm-ssd/: cache.csv
exp/results/cache/auctionmark/2/2/ssd/: cache.csv
exp/results/cache/auctionmark/4/3/dram-nvm/: cache.csv
exp/results/cache/auctionmark/4/3/dram-nvm-ssd/: cache.csv
exp/results/cache/auctionmark/4/3/dram-ssd/: cache.csv
exp/results/cache/auctionmark/4/3/nvm-ssd/: cache.csv
exp/results/cache/chbenchmark/2/2/dram-disk/: cache.csv
exp/results/cache/chbenchmark/2/2/dram-nvm-disk/: cache.csv
exp/results/cache/chbenchmark/2/2/nvm-disk/: cache.csv
fio/: profile.fio
oltpbench/: machine_auctionmark_config.xml  machine_linkbench_config.xml  machine_smallbank_config.xml  machine_tatp_config.xml  machine_ycsb_insert_config.xml  machine_ycsb_read_config.xml
src/: cache.cpp  configuration.cpp  device.cpp  stats.cpp  storage_cache.cpp  types.cpp  workload.cpp
src/include/: cache.h  configuration.h  device.h  macros.h  policy.h  policy_arc.h  policy_fifo.h  policy_harc.h  policy_lfu.h  policy_lru.h  stats.h  storage_cache.h  timer.h  types.h  workload.h
test/: CMakeLists.txt  machine.cpp  policy_arc_test.cpp  policy_fifo_test.cpp  policy_harc_test.cpp  policy_lfu_test.cpp  policy_lru_test.cpp
traces/: example.txt
(+586 files in other folders)
